--- a/testing_web-app/index.html
+++ b/testing_web-app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <link href="//fonts.googleapis.com/css?family=Montserrat:regular,700&subset=latin" rel="stylesheet" type="text/css"/>
