spinner bootstrap dependency eliminated. semplification of translate_one

--- a/module/test/test.html
+++ b/module/test/test.html
@@ -6,7 +6,7 @@
 
   <!-- Load the translation observer as a module -->
   <script type="module">
-    import { startTranslationObserver } from 'http://127.0.0.1:8000/static/translator.js';
+    import startTranslationObserver from 'http://127.0.0.1:8000/static/translator.js';
     startTranslationObserver("http://127.0.0.1:8000");
   </script>
 </head>
